{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 386,
  "lineage": "5b95aca5-6777-5b2d-2cf3-cc42120b5240",
  "resources": [
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecsinfra-alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:security-group/sg-0752046a8ac9647c9",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0752046a8ac9647c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "824563723839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecsinfra-ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:security-group/sg-0a24d0f832ef67064",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a24d0f832ef67064",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0752046a8ac9647c9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "824563723839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_security_group.ecsinfra-alb_sg",
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.base_infra",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "default-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2041170018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-044c1e5dfb0175076",
            "self": false,
            "source_security_group_id": "sg-0a24d0f832ef67064",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_security_group.ecsinfra-alb_sg",
            "module.base_infra.aws_security_group.ecsinfra-ecs_sg",
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_security_group.db-sg",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "db-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c04439f41ca248f5",
            "domain": "vpc",
            "id": "eipalloc-0c04439f41ca248f5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-47-167.compute-1.amazonaws.com",
            "public_ip": "34.238.47.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc": true
          },
          "dependencies": [
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026d6de5ab7b9cd83",
            "domain": "vpc",
            "id": "eipalloc-026d6de5ab7b9cd83",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-44-239-111.compute-1.amazonaws.com",
            "public_ip": "52.44.239.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc": true
          },
          "dependencies": [
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:internet-gateway/igw-0aab79f1bffbc1dc4",
            "id": "igw-0aab79f1bffbc1dc4",
            "owner_id": "824563723839",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c04439f41ca248f5",
            "connectivity_type": "public",
            "id": "nat-05ad4a2e75be22f9c",
            "network_interface_id": "eni-030ac6ddfbcfedd3d",
            "private_ip": "10.0.2.8",
            "public_ip": "34.238.47.167",
            "subnet_id": "subnet-036681a0318e61694",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            }
          },
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026d6de5ab7b9cd83",
            "connectivity_type": "public",
            "id": "nat-07b63c877c7bfd1ff",
            "network_interface_id": "eni-0954d35d33a044252",
            "private_ip": "10.0.3.139",
            "public_ip": "52.44.239.111",
            "subnet_id": "subnet-0d46a205f3ac0cb47",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            }
          },
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "db-internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aab79f1bffbc1dc4",
            "id": "r-rtb-0e2a438e62a09ca911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2a438e62a09ca91",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:route-table/rtb-06f859c5a6437c511",
            "id": "rtb-06f859c5a6437c511",
            "owner_id": "824563723839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ad4a2e75be22f9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_nat_gateway.db-natgw",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:route-table/rtb-0fab9e5d3d9eef2e5",
            "id": "rtb-0fab9e5d3d9eef2e5",
            "owner_id": "824563723839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b63c877c7bfd1ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_nat_gateway.db-natgw",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-private_rt_assgn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041a59b4f664528e3",
            "route_table_id": "rtb-06f859c5a6437c511",
            "subnet_id": "subnet-055dddfb182d54216"
          },
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_nat_gateway.db-natgw",
            "module.database_infra.aws_route_table.db-private_rt",
            "module.database_infra.aws_subnet.db-private_subnet",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7445abaee933c8b",
            "route_table_id": "rtb-0fab9e5d3d9eef2e5",
            "subnet_id": "subnet-087ccf30db5ebb559"
          },
          "dependencies": [
            "module.database_infra.aws_eip.db-eip",
            "module.database_infra.aws_internet_gateway.db-igw",
            "module.database_infra.aws_nat_gateway.db-natgw",
            "module.database_infra.aws_route_table.db-private_rt",
            "module.database_infra.aws_subnet.db-private_subnet",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:security-group/sg-044c1e5dfb0175076",
            "description": "rds security group for test",
            "egress": [],
            "id": "sg-044c1e5dfb0175076",
            "ingress": [],
            "name": "test-db",
            "name_prefix": "",
            "owner_id": "824563723839",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:subnet/subnet-055dddfb182d54216",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055dddfb182d54216",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "824563723839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:subnet/subnet-087ccf30db5ebb559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087ccf30db5ebb559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "824563723839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:subnet/subnet-036681a0318e61694",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036681a0318e61694",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "824563723839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:subnet/subnet-0d46a205f3ac0cb47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d46a205f3ac0cb47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "824563723839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Department": "Engineering"
            },
            "tags_all": {
              "Department": "Engineering"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.database_infra[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "db-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:824563723839:vpc/vpc-0106e9eb8bd3a88a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0238d7e049e3eedb2",
            "default_route_table_id": "rtb-0e2a438e62a09ca91",
            "default_security_group_id": "sg-0aaf403ca0bf6a38e",
            "dhcp_options_id": "dopt-06bcf3f9421e44386",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0106e9eb8bd3a88a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e2a438e62a09ca91",
            "owner_id": "824563723839"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service_frontend",
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecsinfra-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:loadbalancer/app/test-frontend-load-balancer/c554bfbaeed32628",
            "arn_suffix": "app/test-frontend-load-balancer/c554bfbaeed32628",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-frontend-load-balancer-1937784766.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:824563723839:loadbalancer/app/test-frontend-load-balancer/c554bfbaeed32628",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-frontend-load-balancer",
            "security_groups": [
              "sg-0752046a8ac9647c9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036681a0318e61694"
              },
              {
                "subnet_id": "subnet-0d46a205f3ac0cb47"
              }
            ],
            "subnets": [
              "subnet-036681a0318e61694",
              "subnet-0d46a205f3ac0cb47"
            ],
            "tags": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "vpc_id": "vpc-0106e9eb8bd3a88a5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.base_infra.aws_security_group.ecsinfra-alb_sg",
            "module.base_infra.aws_subnet.ecsinfra-public_subnet",
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.service_frontend",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ecsinfra-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:listener/app/test-frontend-load-balancer/c554bfbaeed32628/3f2de2882d037231",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:824563723839:listener/app/test-frontend-load-balancer/c554bfbaeed32628/3f2de2882d037231",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:loadbalancer/app/test-frontend-load-balancer/c554bfbaeed32628",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_security_group.ecsinfra-alb_sg",
            "module.base_infra.aws_subnet.ecsinfra-public_subnet",
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available",
            "module.service_frontend.aws_alb.ecsinfra-alb"
          ]
        }
      ]
    },
    {
      "module": "module.service_frontend",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "ecsinfra-listner-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-blue/1d7b9fbf68dffecf",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-green/1b66cf9e150cc4b9",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:listener-rule/app/test-frontend-load-balancer/c554bfbaeed32628/3f2de2882d037231/bd48e62ec07a1936",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:824563723839:listener-rule/app/test-frontend-load-balancer/c554bfbaeed32628/3f2de2882d037231/bd48e62ec07a1936",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:listener/app/test-frontend-load-balancer/c554bfbaeed32628/3f2de2882d037231",
            "priority": 101,
            "tags": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infra.aws_security_group.ecsinfra-alb_sg",
            "module.base_infra.aws_subnet.ecsinfra-public_subnet",
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_subnet.db-public_subnet",
            "module.database_infra.aws_vpc.db-vpc",
            "module.database_infra.data.aws_availability_zones.available",
            "module.service_frontend.aws_alb.ecsinfra-alb",
            "module.service_frontend.aws_alb_listener.ecsinfra-listner",
            "module.service_frontend.aws_alb_target_group.ecsinfra-tg-blue",
            "module.service_frontend.aws_alb_target_group.ecsinfra-tg-green"
          ]
        }
      ]
    },
    {
      "module": "module.service_frontend",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecsinfra-tg-blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-blue/1d7b9fbf68dffecf",
            "arn_suffix": "targetgroup/test-frontend-tg-blue/1d7b9fbf68dffecf",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-blue/1d7b9fbf68dffecf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-frontend-tg-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_vpc.db-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.service_frontend",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecsinfra-tg-green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-green/1b66cf9e150cc4b9",
            "arn_suffix": "targetgroup/test-frontend-tg-green/1b66cf9e150cc4b9",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:824563723839:targetgroup/test-frontend-tg-green/1b66cf9e150cc4b9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "test-frontend-tg-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Department": "Production",
              "Environment": "ECS-Infrastructure",
              "ManagedBy": "Terraform",
              "Name": "test-ecs",
              "Region": "us-east-1"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0106e9eb8bd3a88a5"
          },
          "dependencies": [
            "module.base_infra.aws_vpc.ecsinfra-vpc",
            "module.database_infra.aws_vpc.db-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}